--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "principios-solid-ejercicios",
+  "name": "se_desaprueba_hoy",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/app.ts",
-    "start": "tsx src/app.ts",
-    "demo:srp": "tsx src/01-single-responsibility-principle/index.ts",
-    "demo:ocp": "tsx src/02-open-closed-principle/index.ts",
-    "demo:lsp": "tsx src/03-liskov-substitution-principle/index.ts",
-    "demo:isp": "tsx src/04-interface-segregation-principle/index.ts",
-    "demo:dip": "tsx src/05-dependency-inversion-principle/index.ts"
+    "start": "tsx src/app.ts"
   },
   "devDependencies": {
     "tsx": "^4.16.0",
